force-app/main/default/objects/Risk_Trigger__mdt/Risk_Trigger__mdt.object-meta.xml
<CustomObject>
    <label>Risk Trigger</label>
    <pluralLabel>Risks Trigger</pluralLabel>
</CustomObject>