force-app/main/default/objects/Risk_Trigger__mdt/fields/Higher_Amount__c.field-meta.xml
<CustomField>
    <fullName>Higher_Amount__c</fullName>
    <label>Higher Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>