force-app/main/default/objects/Risk_Trigger__mdt/fields/Lower_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lower_Amount__c</fullName>
    <label>Lower Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>