force-app/main/default/objects/Risk_Trigger__mdt/listViews/Risk_Trigger_View.listView-meta.xml
<ListView>
    <fullName>Risk_Trigger_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Lower_Amount__c</columns>
    <columns>Higher_Amount__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>Risk Trigger View</label>
</ListView>